--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,15 +1,23 @@
-{"version": 4,
- "packagesDir": "lake-packages",
+{"version": 7,
+ "packagesDir": ".lake/packages",
  "packages":
- [{"git":
-   {"url": "https://github.com/JLimperg/aesop",
-    "subDir?": null,
-    "rev": "354432d437fb37738ed93ac6988669d78a870ed0",
-    "name": "aesop",
-    "inputRev?": null}},
-  {"git":
-   {"url": "https://github.com/leanprover/std4.git",
-    "subDir?": null,
-    "rev": "7601c54efadd70b688a163f5dcc11ae0ccdf7621",
-    "name": "std",
-    "inputRev?": "main"}}]}
+ [{"url": "https://github.com/leanprover/std4.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "fedda205c86d6013f765b95b410aa4982e6617be",
+   "name": "std",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/JLimperg/aesop",
+   "type": "git",
+   "subDir": null,
+   "rev": "e3372d893de7a55757621001d663eadd9bf5e0d4",
+   "name": "aesop",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": null,
+   "inherited": false,
+   "configFile": "lakefile.lean"}],
+ "name": "LeanSAT",
+ "lakeDir": ".lake"}
