--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,11 @@ jobs:
           ./elan-init -y --default-toolchain none
           echo "$HOME/.elan/bin" >> $GITHUB_PATH
 
+      - uses: DeterminateSystems/nix-installer-action@main
+
+      - name: install cadical
+        run: nix profile install nixpkgs#cadical
+
       - uses: actions/checkout@v2
 
       - name: build
