--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,10 +4,10 @@
  [{"url": "https://github.com/leanprover/std4.git",
    "type": "git",
    "subDir": null,
-   "rev": "fedda205c86d6013f765b95b410aa4982e6617be",
+   "rev": "e7d3f12075e847b38a125f8be5f5de081be8e211",
    "name": "std",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "List.ofFn",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "LeanSAT",
