--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,10 +4,10 @@
  [{"url": "https://github.com/leanprover/std4.git",
    "type": "git",
    "subDir": null,
-   "rev": "e7d3f12075e847b38a125f8be5f5de081be8e211",
+   "rev": "f7e7cab885d8389b175ec90b08636d2c5f4dbb1f",
    "name": "std",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "List.ofFn",
+   "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "LeanSAT",
