--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,10 +4,10 @@
  [{"url": "https://github.com/leanprover/std4.git",
    "type": "git",
    "subDir": null,
-   "rev": "32983874c1b897d78f20d620fe92fc8fd3f06c3a",
+   "rev": "e0eb3090ec2e5044c92e9bba9c269c91375f8d5e",
    "name": "std",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "e0eb3090ec2e5044c92e9bba9c269c91375f8d5e",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "LeanSAT",
