chore: upgrade toolchain

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,10 +4,10 @@
  [{"url": "https://github.com/leanprover/std4.git",
    "type": "git",
    "subDir": null,
-   "rev": "20a48c9c02e135138d8281c50f772269d78eb1fc",
+   "rev": "80cf5a1f2d8ed48753e8ff783bf0f7b6872bb007",
    "name": "std",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "20a48c9c02e135138d8281c50f772269d78eb1fc",
+   "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "LeanSAT",
