chore: upgrade to batteries

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,11 +1,11 @@
 {"version": 7,
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/leanprover/std4.git",
+ [{"url": "https://github.com/leanprover-community/batteries.git",
    "type": "git",
    "subDir": null,
-   "rev": "80cf5a1f2d8ed48753e8ff783bf0f7b6872bb007",
-   "name": "std",
+   "rev": "56d2e4ee226603eb6b90b05f6b944bde42672cd5",
+   "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
    "inherited": false,
