--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,10 +1,10 @@
-{"version": 7,
+{"version": "1.0.0",
  "packagesDir": ".lake/packages",
  "packages":
  [{"url": "https://github.com/leanprover-community/batteries.git",
    "type": "git",
    "subDir": null,
-   "rev": "07c50dde9e4284165be2fb1906c88a918b9cea8c",
+   "rev": "88e0a4d1643135f34a04e3d0f0661cae60e2978c",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "nightly-testing",
