--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    steps:
-      - name: install elan
-        run: |
-          set -o pipefail
-          curl -sSfL https://github.com/leanprover/elan/releases/download/v1.4.2/elan-x86_64-unknown-linux-gnu.tar.gz | tar xz
-          ./elan-init -y --default-toolchain none
-          echo "$HOME/.elan/bin" >> $GITHUB_PATH
 
+    steps:
       - uses: DeterminateSystems/nix-installer-action@main
 
       - name: install cadical
@@ -25,13 +19,11 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: build
-        id: build
-        run: lake build
-
-      - name: test
-        if: steps.build.outcome == 'success'
-        run: make test
+      - uses: leanprover/lean-action@v1-beta
+        with:
+          test: true
+          use-mathlib-cache: false
+          use-github-cache: true
 
       - name: eval
         run: make eval
