--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,10 +1,11 @@
-{"version": "1.0.0",
+{"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
  [{"url": "https://github.com/leanprover-community/batteries.git",
    "type": "git",
    "subDir": null,
-   "rev": "b24f8d9e82cf133812e74df1adb6d049de74eeb0",
+   "scope": "",
+   "rev": "4e1d17623329b6a46bd6007f031d28119f59d0d1",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "nightly-testing",
