--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,15 +1,5 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
- "packages":
- [{"url": "https://github.com/leanprover-community/batteries.git",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "8bcae1a508ab673a743343f78048cfe5f27250f5",
-   "name": "batteries",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing",
-   "inherited": false,
-   "configFile": "lakefile.lean"}],
+ "packages": [],
  "name": "LeanSAT",
  "lakeDir": ".lake"}
